[project]
name = "mcp-client"
version = "0.1.0"
description = "a mcp client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.20.0",
    "lxml>=5.4.0",
    "mcp>=1.9.3",
    "openai>=1.84.0",
    "quart>=0.20.0",
    "quart-cors>=0.8.0",
    "requests>=2.32.4",
]
